--- a/calendrier_main/index.html
+++ b/calendrier_main/index.html
@@ -11,87 +11,223 @@
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
     <script src="https://unpkg.com/aframe-physics-extras/dist/aframe-physics-extras.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@4.0.1/dist/aframe-event-set-component.min.js"></script>
-    <!--<script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>-->
     <script src="components/ui-widget.js"></script>
     <script src="components/changement-outil.js"></script>
     <script src="components/horloge.js"></script>
+    <script src="components/jour-clickable.js"></script>
   </head>
   <body>
     <a-scene stats physics environment="preset:forest; shadow:false;">
 
       <a-assets>
-        <a-mixin id="mypoint" phase-shift raycaster="showLine:true;far:100;interval:25;"
-               super-hands="colliderEvent:raycaster-intersection;
-                            colliderEventProperty:els;
-                            colliderEndEvent:raycaster-intersection-cleared;
-                            colliderEndEventProperty:el;
-                            dragDropEndButtons: triggerup;
-                            dragDropStartButtons: triggerdown;
-                            stretchEndButtons: triggerup;
-                            stretchStartButtons: triggerdown;
-                            grabEndButtons: triggerup;
-                            grabStartButtons: triggerdown;"></a-mixin>
+        <a-mixin id="mypoint" phase-shift
+                 raycaster="showLine:true;far:15;interval:25;"
+                 super-hands="colliderEvent:raycaster-intersection;
+                              colliderEventProperty:els;
+                              colliderEndEvent:raycaster-intersection-cleared;
+                              colliderEndEventProperty:el;
+                              dragDropEndButtons: gripup;
+                              dragDropStartButtons: gripdown;
+                              stretchEndButtons: gripup;
+                              stretchStartButtons: gripdown;
+                              grabEndButtons: triggerup;
+                              grabStartButtons: triggerdown;"></a-mixin>
         <!-- to change touch mode collider -->
         <a-mixin id="mytouch" physics-collider phase-shift
                  collision-filter="collisionForces: false"
                  static-body="shape: sphere; sphereRadius: 0.02"
-                 super-hands="colliderEvent: collisions; colliderEventProperty: els;
-                              colliderEndEvent: collisions; colliderEndEventProperty: clearedEls;
-                              grabStartButtons:triggerdown;grabEndButtons:triggerup;colliderState:"></a-mixin>
-        <a-mixin id="cubeMois" geometry="primitive:box; width:0.4; height:0.4; depth:0.4"
-                 grabbable hoverable draggable dynamic-body stretchable shadow
+                 super-hands="colliderEvent: collisions;
+                              colliderEventProperty: els;
+                              colliderEndEvent: collisions;
+                              colliderEndEventProperty: clearedEls;
+                              grabStartButtons:gripdown;
+                              grabEndButtons:gripup;
+                              colliderState:"></a-mixin>
+        <a-mixin id="cubeMois"
+                 geometry="primitive:box; width:0.4; height:0.4; depth:0.4"
+                 grabbable hoverable stretchable shadow draggable dynamic-body
                  event-set__grab-start="material.opacity: 0.7"
                  event-set__grab-end="material.opacity:1.0"></a-mixin>
-        <a-mixin id='cubeMois-hovered' material="opacity:0.7; transparent:true;"></a-mixin>
-        <a-mixin id='cubeMois-grabbed' material="color:red;"></a-mixin>
-        <a-mixin id='horloge-hovered' material="opacity:0.7; transparent:true;"></a-mixin>
+        <a-mixin id="btnCal" rotation="180 90 90" hoverable jour-clickable
+                 geometry="width:0.5;height:0.1;depth:0.5" material="opacity:0.2">
+        </a-mixin>
+        <a-mixin id="fade" attribute="material.opacity" direction="alternate"
+                 begin="" repeat="0" from="0.2" to="1"></a-mixin>
+        <img id="t_1" src="img/jour/1.png">
+        <img id="t_2" src="img/jour/2.png">
+        <img id="t_3" src="img/jour/3.png">
+        <img id="t_4" src="img/jour/4.png">
+        <img id="t_5" src="img/jour/5.png">
+        <img id="t_6" src="img/jour/6.png">
+        <img id="t_7" src="img/jour/7.png">
+        <img id="t_8" src="img/jour/8.png">
+        <img id="t_9" src="img/jour/9.png">
+        <img id="t_0" src="img/jour/0.png">
+        <img id="t_ok" src="img/jour/ok.png">
+        <img id="t_reset" src="img/jour/reset.png">
       </a-assets>
 
       <!-- Les mains -->
-      <a-entity id="player" progressive-controls="controllerModel:false;maxLevel:touch;
-                pointMixin:mypoint;touchMixin:mytouch;override:true;">
+      <a-entity id="player" progressive-controls="controllerModel:false;
+                override:true;objects:.cube #horloge .choixJour;">
         <a-entity id="lhand" teleport-controls="type:parabolic;"
                   hand-controls="left"></a-entity>
-        <a-entity id="rhand" changement-outil hand-controls="right"></a-entity>
+                  <a-entity id="rhand" changement-outil hand-controls="right"></a-entity>
       </a-entity>
 
       <!-- Horloge -->
       <a-entity id="horloge"
-                event-set__grab-start="material.opacity: 0.7"
-                event-set__grab-end="material.opacity:1.0"
-                event-set__hover-start="material.wireframe: true"
-                event-set__hover-end="material.wireframe:false"
-                horloge hoverable grabbable draggable
-                data-heure-choisisse=""
+                event-set__hover-start="material.wireframe: true;"
+                event-set__hover-end="material.wireframe:false;"
+                horloge hoverable data-heure-choisisse=""
                 geometry="primitive: cylinder; radius:0.59; height:0.045;"
                 scale="0.8 0.8 0.8" position="1.5 1.5 -1"
                 material="color:#FFFFFF;" rotation="90 270 0">
         <a-entity id="monAiguille" ui-rotary ></a-entity>
-        <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;" position="0 0.048 -0.217" material="color:#a82121" rotation="90 0 0"></a-entity>
+        <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;"
+                  position="0 0.048 -0.217" material="color:#a82121"
+                  rotation="90 0 0"></a-entity>
         <a-entity id="lesChiffres">
-          <a-entity  text="value:1;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.252 0.027 -0.388"></a-entity>
-          <a-entity  text="value:2;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 -0.25"></a-entity>
-          <a-entity  text="value:3;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.493 0.027 -0.003"></a-entity>
-          <a-entity  text="value:4;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.419 0.027 0.255"></a-entity>
-          <a-entity  text="value:5;align:center;color:#000000;width:4" rotation="-90 0 0" position="0.237 0.027 0.41"></a-entity>
-          <a-entity  text="value:6;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 0.474"></a-entity>
-          <a-entity  text="value:7;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 0.41"></a-entity>
-          <a-entity  text="value:8;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 0.255"></a-entity>
-          <a-entity  text="value:9;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.493 0.027 -0.003"></a-entity>
-          <a-entity  text="value:10;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.43 0.027 -0.217"></a-entity>
-          <a-entity  text="value:11;align:center;color:#000000;width:4" rotation="-90 0 0" position="-0.261 0.027 -0.388"></a-entity>
-          <a-entity  text="value:12;align:center;color:#000000;width:4" rotation="-90 0 0" position="0 0.027 -0.462"></a-entity>
+          <a-entity text="value:1;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0.252 0.027 -0.388"></a-entity>
+          <a-entity text="value:2;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0.419 0.027 -0.25"></a-entity>
+          <a-entity text="value:3;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0.493 0.027 -0.003"></a-entity>
+          <a-entity text="value:4;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0.419 0.027 0.255"></a-entity>
+          <a-entity text="value:5;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0.237 0.027 0.41"></a-entity>
+          <a-entity text="value:6;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0 0.027 0.474"></a-entity>
+          <a-entity text="value:7;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="-0.261 0.027 0.41"></a-entity>
+          <a-entity text="value:8;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="-0.43 0.027 0.255"></a-entity>
+          <a-entity text="value:9;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="-0.493 0.027 -0.003"></a-entity>
+          <a-entity text="value:10;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="-0.43 0.027 -0.217"></a-entity>
+          <a-entity text="value:11;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="-0.261 0.027 -0.388"></a-entity>
+          <a-entity text="value:12;align:center;color:#000000;width:4"
+                    rotation="-90 0 0" position="0 0.027 -0.462"></a-entity>
         </a-entity>
       </a-entity>
 
-      <a-entity id="calendrier" position="0 2 0" rotation="90 90 0">
-        <a-entity class="pivot" geometry="depth:0.1;height:0.2;width:0.2" position="0 0.01 -0.355" rotation="90 90 0" material="color:black" static-body></a-entity>
-        <a-entity grabbable constraint="axis:0 0 0;targetPivot: 0 0.02 0; type: pointToPoint; pivot: 0 1 0;distance:0.2; maxForce: 1;target:.pivot;" geometry="width:0.5;height:0.1;depth:0.5" dynamic-body material="color:red"></a-entity>
-        <a-entity geometry="width:0.5;height:0.1;depth:0.5" material="color:white"></a-entity>
+      <!-- Jour -->
+      <a-entity id="calendrier" position="-2 4 -2">
+        <a-text id="textJour" position="0 1 0" text="width: 10;anchor: align;" value="Day Selected : "></a-text>
+        <!-- 1re rangée -->
+        <a-entity class="choixJour" data-jour="1" mixin="btnCal" material="src:#t_1;">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="2" mixin="btnCal" material="src:#t_2;" position="0.6 0 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="3" mixin="btnCal" material="src:#t_3;" position="1.2 0 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="4" mixin="btnCal" material="src:#t_4;" position="1.8 0 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="5" mixin="btnCal" material="src:#t_5;" position="2.4 0 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="6" mixin="btnCal" material="src:#t_6;" position="3 0 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <!-- 2e rangée -->
+        <a-entity class="choixJour" data-jour="7" mixin="btnCal" material="src:#t_1;" position="0 -0.6 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="8" mixin="btnCal" material="src:#t_2;" position="0.6 -0.6 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="9" mixin="btnCal" material="src:#t_3;" position="1.2 -0.6 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="10" mixin="btnCal" material="src:#t_4;" position="1.8 -0.6 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="11" mixin="btnCal" material="src:#t_5;" position="2.4 -0.6 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="12" mixin="btnCal" material="src:#t_6;" position="3 -0.6 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <!-- 3e rangée -->
+        <a-entity class="choixJour" data-jour="13" mixin="btnCal" material="src:#t_1;" position="0 -1.2 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="14" mixin="btnCal" material="src:#t_2;" position="0.6 -1.2 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="15" mixin="btnCal" material="src:#t_3;" position="1.2 -1.2 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="16" mixin="btnCal" material="src:#t_4;" position="1.8 -1.2 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="17" mixin="btnCal" material="src:#t_5;" position="2.4 -1.2 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="18" mixin="btnCal" material="src:#t_6;" position="3 -1.2 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <!-- 4e rangée -->
+        <a-entity class="choixJour" data-jour="19" mixin="btnCal" material="src:#t_1;" position="0 -1.8 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="20" mixin="btnCal" material="src:#t_2;" position="0.6 -1.8 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="21" mixin="btnCal" material="src:#t_3;" position="1.2 -1.8 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="22" mixin="btnCal" material="src:#t_4;" position="1.8 -1.8 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="23" mixin="btnCal" material="src:#t_5;" position="2.4 -1.8 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="24" mixin="btnCal" material="src:#t_6;" position="3 -1.8 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <!-- 5e rangée -->
+        <a-entity class="choixJour" data-jour="25" mixin="btnCal" material="src:#t_1;" position="0 -2.4 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="26" mixin="btnCal" material="src:#t_2;" position="0.6 -2.4 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="27" mixin="btnCal" material="src:#t_3;" position="1.2 -2.4 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="28" mixin="btnCal" material="src:#t_4;" position="1.8 -2.4 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="29" mixin="btnCal" material="src:#t_5;" position="2.4 -2.4 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <a-entity class="choixJour" data-jour="30" mixin="btnCal" material="src:#t_6;" position="3 -2.4 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
+        <!-- 6e rangée -->
+        <a-entity class="choixJour" data-jour="31" mixin="btnCal" material="src:#t_1;" position="0 -3 0">
+          <a-animation mixin="fade"></a-animation>
+        </a-entity>
       </a-entity>
 
 
-      <a-entity class="cube" mixin="cubeMois" position="-0.5 5 -1.5"  material="color:green"></a-entity>
+      <!--<a-entity id="calendrier" position="0 2 0" rotation="90 90 0">
+        <a-entity class="pivot" geometry="depth:0.1;height:0.2;width:0.2" position="0 0.01 -0.355" rotation="90 90 0" material="color:black" static-body></a-entity>
+        <a-entity grabbable constraint="axis:0 0 0;targetPivot: 0 0.02 0; type: pointToPoint; pivot: 0 1 0;distance:0.2; maxForce: 1;target:.pivot;" geometry="width:0.5;height:0.1;depth:0.5" dynamic-body material="color:red"></a-entity>
+        <a-entity geometry="width:0.5;height:0.1;depth:0.5" material="color:white"></a-entity>
+      </a-entity>-->
+
+
+      <a-entity class="cube" mixin="cubeMois" position="-0.5 5 3" material="color:white"></a-entity>
       <a-grid static-body material="opacity:0"></a-grid>
     </a-scene>
 
