--- a/calendrier_main/index.html
+++ b/calendrier_main/index.html
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/aframe-physics-extras/dist/aframe-physics-extras.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@4.0.1/dist/aframe-event-set-component.min.js"></script>
     <script src="components/ui-widget.js"></script>
+    <script src="components/phase-shift.js"></script>
     <script src="components/changement-outil.js"></script>
     <script src="components/horloge.js"></script>
     <script src="components/jour-clickable.js"></script>
@@ -21,15 +22,15 @@
 
       <a-assets>
         <a-mixin id="mypoint" phase-shift
-                 raycaster="showLine:true;far:15;interval:25;"
+                 raycaster="showLine:true;far:15;interval:25;objects:.choixJour, .cube;"
                  super-hands="colliderEvent:raycaster-intersection;
                               colliderEventProperty:els;
                               colliderEndEvent:raycaster-intersection-cleared;
                               colliderEndEventProperty:el;
-                              dragDropEndButtons: gripup;
-                              dragDropStartButtons: gripdown;
-                              stretchEndButtons: gripup;
-                              stretchStartButtons: gripdown;
+                              dragDropEndButtons: triggerup;
+                              dragDropStartButtons: triggerdown;
+                              stretchEndButtons: triggerup;
+                              stretchStartButtons: triggerdown;
                               grabEndButtons: triggerup;
                               grabStartButtons: triggerdown;"></a-mixin>
         <!-- to change touch mode collider -->
@@ -40,19 +41,19 @@
                               colliderEventProperty: els;
                               colliderEndEvent: collisions;
                               colliderEndEventProperty: clearedEls;
-                              grabStartButtons:gripdown;
-                              grabEndButtons:gripup;
+                              grabStartButtons:triggerdown;
+                              grabEndButtons:triggerup;
                               colliderState:"></a-mixin>
-        <a-mixin id="cubeMois"
+        <a-mixin id="cubeMois" grabbable hoverable draggable dynamic-body shadow
                  geometry="primitive:box; width:0.4; height:0.4; depth:0.4"
-                 grabbable hoverable stretchable shadow draggable dynamic-body
-                 event-set__grab-start="material.opacity: 0.7"
-                 event-set__grab-end="material.opacity:1.0"></a-mixin>
-        <a-mixin id="btnCal" rotation="180 90 90" hoverable jour-clickable
-                 geometry="width:0.5;height:0.1;depth:0.5" material="opacity:0.2">
-        </a-mixin>
+                 event-set__hover-start="material.opacity: 0.7"
+                 event-set__hover-end="material.opacity: 1.0"
+                 event-set__grab-start="material.color: green"></a-mixin>
+        <a-mixin id="btnCal" rotation="180 90 90" jour-clickable
+                 geometry="width:0.5;height:0.1;depth:0.5"
+                 material="opacity:0.2"></a-mixin>
         <a-mixin id="fade" attribute="material.opacity" direction="alternate"
-                 begin="" repeat="0" from="0.2" to="1"></a-mixin>
+                 begin="playFade" repeat="0" from="0.2" to="1"></a-mixin>
         <img id="t_1" src="img/jour/1.png">
         <img id="t_2" src="img/jour/2.png">
         <img id="t_3" src="img/jour/3.png">
@@ -69,17 +70,17 @@
 
       <!-- Les mains -->
       <a-entity id="player" progressive-controls="controllerModel:false;
-                override:true;objects:.cube #horloge .choixJour;">
-        <a-entity id="lhand" teleport-controls="type:parabolic;"
-                  hand-controls="left"></a-entity>
-                  <a-entity id="rhand" changement-outil hand-controls="right"></a-entity>
+                maxLevel:point;pointMixin:mypoint;touchMixin:mytouch;">
+        <a-entity id="lhand" hand-controls="left"
+                  teleport-controls="type:parabolic;"></a-entity>
+        <a-entity id="rhand" hand-controls="right"></a-entity>
       </a-entity>
 
       <!-- Horloge -->
       <a-entity id="horloge"
                 event-set__hover-start="material.wireframe: true;"
                 event-set__hover-end="material.wireframe:false;"
-                horloge hoverable data-heure-choisisse=""
+                horloge grabbable hoverable data-heure-choisisse=""
                 geometry="primitive: cylinder; radius:0.59; height:0.045;"
                 scale="0.8 0.8 0.8" position="1.5 1.5 -1"
                 material="color:#FFFFFF;" rotation="90 270 0">
@@ -116,7 +117,7 @@
       </a-entity>
 
       <!-- Jour -->
-      <a-entity id="calendrier" position="-2 4 -2">
+      <a-entity id="calendrier"hoverable position="-1.05 2.7 -3" scale="0.7 0.7 0.7">
         <a-text id="textJour" position="0 1 0" text="width: 10;anchor: align;" value="Day Selected : "></a-text>
         <!-- 1re rangée -->
         <a-entity class="choixJour" data-jour="1" mixin="btnCal" material="src:#t_1;">
@@ -219,7 +220,6 @@
         </a-entity>
       </a-entity>
 
-
       <!--<a-entity id="calendrier" position="0 2 0" rotation="90 90 0">
         <a-entity class="pivot" geometry="depth:0.1;height:0.2;width:0.2" position="0 0.01 -0.355" rotation="90 90 0" material="color:black" static-body></a-entity>
         <a-entity grabbable constraint="axis:0 0 0;targetPivot: 0 0.02 0; type: pointToPoint; pivot: 0 1 0;distance:0.2; maxForce: 1;target:.pivot;" geometry="width:0.5;height:0.1;depth:0.5" dynamic-body material="color:red"></a-entity>
@@ -227,7 +227,7 @@
       </a-entity>-->
 
 
-      <a-entity class="cube" mixin="cubeMois" position="-0.5 5 3" material="color:white"></a-entity>
+      <a-entity class="cube" mixin="cubeMois" position="0 1 0" material="color:white"></a-entity>
       <a-grid static-body material="opacity:0"></a-grid>
     </a-scene>
 
