--- a/point/moisAvecPointer/index.html
+++ b/point/moisAvecPointer/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Calendrier main</title>
-    <meta name ="description" content="Calendrier main - A-Frame">
+    <title>Mois avec pointer</title>
+    <meta name ="description" content="Mois avec pointer - A-Frame">
     <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
@@ -11,18 +11,20 @@
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
     <script src="https://unpkg.com/aframe-physics-extras/dist/aframe-physics-extras.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@4.0.1/dist/aframe-event-set-component.min.js"></script>
-    <script src="components/ui-widget.js"></script>
+    <!--<script src="components/ui-widget.js"></script>-->
     <script src="components/phase-shift.js"></script>
     <script src="components/changement-outil.js"></script>
     <script src="components/horloge.js"></script>
     <script src="components/jour-clickable.js"></script>
+    <script src="components/lecture-cube.js"></script>
   </head>
   <body>
     <a-scene stats physics environment="preset:forest; shadow:false;">
 
       <a-assets>
         <a-mixin id="mypoint" phase-shift
-                 raycaster="showLine:true;far:15;interval:25;objects:.choixJour, .cube;"
+                 raycaster="showLine:true;far:15;interval:25;
+                            objects:.choixJour, .cube, .lecteurCube;"
                  super-hands="colliderEvent:raycaster-intersection;
                               colliderEventProperty:els;
                               colliderEndEvent:raycaster-intersection-cleared;
@@ -33,22 +35,23 @@
                               stretchStartButtons: triggerdown;
                               grabEndButtons: triggerup;
                               grabStartButtons: triggerdown;"></a-mixin>
-        <!-- to change touch mode collider -->
-        <a-mixin id="mytouch" physics-collider phase-shift
-                 collision-filter="collisionForces: false"
-                 static-body="shape: sphere; sphereRadius: 0.02"
-                 super-hands="colliderEvent: collisions;
-                              colliderEventProperty: els;
-                              colliderEndEvent: collisions;
-                              colliderEndEventProperty: clearedEls;
-                              grabStartButtons:triggerdown;
-                              grabEndButtons:triggerup;
-                              colliderState:"></a-mixin>
-        <a-mixin id="cubeMois" grabbable hoverable draggable dynamic-body shadow
+        <!-- Pour les mois -->
+        <a-mixin id="cubeMois" grabbable hoverable
+                 draggable dynamic-body shadow
                  geometry="primitive:box; width:0.4; height:0.4; depth:0.4"
-                 event-set__hover-start="material.opacity: 0.7"
-                 event-set__hover-end="material.opacity: 1.0"
-                 event-set__grab-start="material.color: green"></a-mixin>
+                 event-set__hover-start="material.opacity: 0.4"
+                 event-set__hover-end="material.opacity: 1.0"></a-mixin>
+        <a-mixin id="lecteurCube" droppable static-body
+                 collision-filter="group:.cube;collisionForces: false"
+                 geometry="primitive: box; width: 0.5; height: 0.5; depth: 0.5"
+                 event-set__dragover-start="material.color: green"
+                 event-set__dragover-end="material.color: grey"></a-mixin>
+        <a-mixin id="etagere" static-body material="color:grey;"
+                 rotation="0 90 0"
+                 geometry="primitive:box;
+                           depth: 0.75;
+                           width: 2;height: 0.2"></a-mixin>
+        <!-- Pour les jours -->
         <a-mixin id="btnCal" rotation="180 90 90" jour-clickable
                  data-nb-click="0" geometry="width:0.5;height:0.1;depth:0.5"
                  material="opacity:0.2"></a-mixin>
@@ -56,6 +59,7 @@
         <a-mixin id="fade" attribute="material.opacity" direction="alternate"
                  begin="playFade" repeat="0"
                  from="0.2" to="1" dur="500"></a-mixin>
+        <!-- Textures jour -->
         <img id="t_1" src="img/jour/1.png">
         <img id="t_2" src="img/jour/2.png">
         <img id="t_3" src="img/jour/3.png">
@@ -68,6 +72,31 @@
         <img id="t_0" src="img/jour/0.png">
         <img id="t_ok" src="img/jour/ok.png">
         <img id="t_reset" src="img/jour/reset.png">
+        <!-- Textures mois -->
+        <img id="jan" src="img/mois/jan.png">
+        <img id="feb" src="img/mois/feb.png">
+        <img id="mar" src="img/mois/mar.png">
+        <img id="apr" src="img/mois/apr.png">
+        <img id="may" src="img/mois/may.png">
+        <img id="june" src="img/mois/june.png">
+        <img id="july" src="img/mois/july.png">
+        <img id="aug" src="img/mois/aug.png">
+        <img id="sept" src="img/mois/sept.png">
+        <img id="oct" src="img/mois/oct.png">
+        <img id="nov" src="img/mois/nov.png">
+        <img id="dec" src="img/mois/dec.png">
+        <img id="JAN" src="img/mois/jan_t.png">
+        <img id="FEB" src="img/mois/feb_t.png">
+        <img id="MAR" src="img/mois/mar_t.png">
+        <img id="APR" src="img/mois/apr_t.png">
+        <img id="MAY" src="img/mois/may_t.png">
+        <img id="JUNE" src="img/mois/june_t.png">
+        <img id="JULY" src="img/mois/july_t.png">
+        <img id="AUG" src="img/mois/aug_t.png">
+        <img id="SEPT" src="img/mois/sept_t.png">
+        <img id="OCT" src="img/mois/oct_t.png">
+        <img id="NOV" src="img/mois/nov_t.png">
+        <img id="DEC" src="img/mois/dec_t.png">
       </a-assets>
 
       <!-- Les mains -->
@@ -125,9 +154,9 @@
                       tabSize: 0; width: 2.5;
                       baseline: top; wrapCount: 12;
                       letterSpacing: 0.3"></a-text>
-        <a-entity geometry="width: 7; height: 4; depth: 0.5"
-                  position="0.24 -1.47 -0.3"
-                  material="color: white;"></a-entity>
+        <a-entity geometry="width: 7; height: 5; depth: 0.5"
+                  position="0.24 -1.97 -0.3"
+                  material="color: white;" static-body></a-entity>
         <!-- 1re rangée -->
         <a-entity class="choixJour" data-jour="1" mixin="btnCal" material="src:#t_1;">
           <a-animation mixin="fade"></a-animation>
@@ -229,15 +258,61 @@
         </a-entity>
       </a-entity>
 
-      <!--<a-entity id="calendrier" position="0 2 0" rotation="90 90 0">
-        <a-entity class="pivot" geometry="depth:0.1;height:0.2;width:0.2" position="0 0.01 -0.355" rotation="90 90 0" material="color:black" static-body></a-entity>
-        <a-entity grabbable constraint="axis:0 0 0;targetPivot: 0 0.02 0; type: pointToPoint; pivot: 0 1 0;distance:0.2; maxForce: 1;target:.pivot;" geometry="width:0.5;height:0.1;depth:0.5" dynamic-body material="color:red"></a-entity>
-        <a-entity geometry="width:0.5;height:0.1;depth:0.5" material="color:white"></a-entity>
-      </a-entity>-->
+      <!-- Mois -->
+      <a-entity id="selecteurMois" scale="0.8 0.8 0.8" position="-6 0 0.5">
+        <!-- 1re étagère -->
+        <a-entity class="cube" mixin="cubeMois" position="0.5 2.5 -2"
+                  material="src:#jan" data-mois="JAN"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 2.5 -2.7"
+                  material="src:#feb" data-mois="FEB"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 2.5 -3.4"
+                  material="src:#dec" data-mois="DEC"></a-entity>
+        <a-entity mixin="etagere" position="0.5 2.2 -2.7"></a-entity>
+        <!-- 2e étagère -->
+        <a-entity class="cube" mixin="cubeMois" position="0.5 1.7 -2"
+                  material="src:#mar" data-mois="MAR"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 1.7 -2.7"
+                  material="src:#apr" data-mois="APR"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 1.7 -3.4"
+                  material="src:#may" data-mois="MAY"></a-entity>
+        <a-entity mixin="etagere" position="0.5 1.4 -2.7"></a-entity>
+        <!-- 3e étagère -->
+        <a-entity class="cube" mixin="cubeMois" position="0.5 2.5 0"
+                  material="src:#june" data-mois="JUNE"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 2.5 0.7"
+                  material="src:#july" data-mois="JULY"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 2.5 1.4"
+                  material="src:#aug" data-mois="AUG"></a-entity>
+        <a-entity mixin="etagere" position="0.5 2.2 0.7"></a-entity>
+        <!-- 4e étagère -->
+        <a-entity class="cube" mixin="cubeMois" position="0.5 1.7 0"
+                  material="src:#nov" data-mois="NOV"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 1.7 0.7"
+                  material="src:#sept" data-mois="SEPT"></a-entity>
+        <a-entity class="cube" mixin="cubeMois" position="0.5 1.7 1.4"
+                  material="src:#oct" data-mois="OCT"></a-entity>
+        <a-entity mixin="etagere" position="0.5 1.4 0.7"></a-entity>
 
+        <!-- Le lecteur de cube -->
+        <a-entity class="lecteurCube" mixin="lecteurCube"
+                  position="0.5 1.8 -1" scale="1.2 1.2 1.2"
+                  lecture-cube data-mois-choisi=""
+                  droppable="accepts:.cube"
+                  material="color:grey; opacity: 0.7">
+          <a-box id="blocSousLecteur" static-body width=0.5 position="0 -0.5 0"
+                 height=0.5 depth=0.5 visible="true" shadow></a-box>
+        </a-entity>
 
-      <a-entity class="cube" mixin="cubeMois" position="0 1 0" material="color:white"></a-entity>
-      <a-grid static-body material="opacity:0"></a-grid>
+        <!-- Mur -->
+        <a-entity geometry="width: 7; height: 4; depth: 0.32"
+                  position="0 0.906 -0.95" rotation="0 90 0"
+                  material="color: white;" static-body></a-entity>
+
+      </a-entity>
+
+      <!-- Collider du sol pour empêcher les blocs de tomber -->
+      <a-box static-body width=100 height=0.001 depth=100 visible="false"></a-box>
+
     </a-scene>
 
 </html>
