--- a/point/moisAvecPointer/index.html
+++ b/point/moisAvecPointer/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
     <script src="https://unpkg.com/aframe-physics-extras/dist/aframe-physics-extras.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@4.0.1/dist/aframe-event-set-component.min.js"></script>
-    <!--<script src="components/ui-widget.js"></script>-->
+    <script src="components/ui-widget.js"></script>
     <script src="components/phase-shift.js"></script>
     <script src="components/changement-outil.js"></script>
     <script src="components/horloge.js"></script>
@@ -24,7 +24,8 @@
       <a-assets>
         <a-mixin id="mypoint" phase-shift
                  raycaster="showLine:true;far:15;interval:25;
-                            objects:.choixJour, .cube, .lecteurCube;"
+                            objects:.choixJour, .cube,
+                                    .lecteurCube, .changement-heure;"
                  super-hands="colliderEvent:raycaster-intersection;
                               colliderEventProperty:els;
                               colliderEndEvent:raycaster-intersection-cleared;
@@ -55,6 +56,10 @@
         <a-mixin id="btnCal" rotation="180 90 90" jour-clickable
                  data-nb-click="0" geometry="width:0.5;height:0.1;depth:0.5"
                  material="opacity:0.2"></a-mixin>
+        <!-- Aiguille -->
+        <a-mixin id="aiguille" material="color:#a82121" rotation="90 0 0"
+                 geometry="primitive: box;
+                           depth:0.01; height: 0.6; width:0.02;"></a-mixin>
         <!-- Animations-->
         <a-mixin id="fade" attribute="material.opacity" direction="alternate"
                  begin="playFade" repeat="0"
@@ -108,17 +113,36 @@
       </a-entity>
 
       <!-- Horloge -->
-      <a-entity id="horloge"
-                event-set__hover-start="material.wireframe: true;"
-                event-set__hover-end="material.wireframe:false;"
-                horloge grabbable hoverable data-heure-choisisse=""
-                geometry="primitive: cylinder; radius:0.59; height:0.045;"
+      <a-entity id="horloge" hoverable
+                horloge data-heure-choisisse=""
+                event-set__hover-start="material.opacity: 0.2;"
+                event-set__hover-end="material.opacity:1;"
                 scale="0.8 0.8 0.8" position="1.5 1.5 -1"
-                material="color:#FFFFFF;" rotation="90 270 0">
-        <a-entity id="monAiguille" ui-rotary ></a-entity>
-        <a-entity geometry="primitive: box; depth:0.01; height: 0.6; width:0.02;"
-                  position="0 0.048 -0.217" material="color:#a82121"
-                  rotation="90 0 0"></a-entity>
+                rotation="90 270 0">
+        <a-entity id="monAiguille"
+                  aiguille-horloge clickable hoverable ui-rotary></a-entity>
+        <a-entity id="fondHorloge" geometry="primitive: cylinder; radius:0.59; height:0.045;"
+                  material="color:#FFFFFF;"></a-entity>
+        <!--<a-entity geometry="primitive: cylinder; radius:0.1; height:0.045;"
+                  material="color:grey;" position="0 0.05 0"></a-entity>-->
+        <!-- Les colliders
+        <a-entity class="changement-heure" material="color:blue;"
+                  position="0 0.1 0" geometry="primitive: cylinder;
+                                               radius:0.59; height:0.045;
+                                               thetaLength:180;"></a-entity>
+        <a-entity class="changement-heure"
+                  material="color:red;" position="0 0.1 0"
+                  geometry="primitive: cylinder;
+                            radius:0.59; height:0.045;
+                            thetaLength:180;thetaStart:180;"></a-entity>-->
+
+        <!-- Les aiguilles
+        <a-entity id="monAiguille" mixin="aiguille"
+                  geometry="height: 0.4;"
+                  position="0 0.048 -0.217"></a-entity>
+        <a-entity mixin="aiguille" position="0 0.034 -0.217"></a-entity>-->
+
+        <!-- Les chiffres -->
         <a-entity id="lesChiffres">
           <a-entity text="value:1;align:center;color:#000000;width:4"
                     rotation="-90 0 0" position="0.252 0.027 -0.388"></a-entity>
@@ -148,7 +172,8 @@
       </a-entity>
 
       <!-- Jour -->
-      <a-entity id="calendrier"hoverable position="-1.05 2.06 -3" scale="0.5 0.5 0.5">
+      <a-entity id="calendrier" hoverable
+                position="-1.05 2.06 -3" scale="0.5 0.5 0.5">
         <a-text id="textJour" position="-2.9 0.25 0" value="Day Selected : "
                 text="whiteSpace: pre;
                       tabSize: 0; width: 2.5;
@@ -307,7 +332,6 @@
         <a-entity geometry="width: 7; height: 4; depth: 0.32"
                   position="0 0.906 -0.95" rotation="0 90 0"
                   material="color: white;" static-body></a-entity>
-
       </a-entity>
 
       <!-- Collider du sol pour empêcher les blocs de tomber -->
